# velora_backend

./: .dockerignore  .env.dev  Cargo.toml  Dockerfile.dev  Makefile  docker-compose.dev.yml
.devcontainer/: compose.devcontainer.yml  devcontainer.json
crates/velora-common/: Cargo.toml
crates/velora-common/src/: config.rs  telemetry.rs
crates/velora-events/: Cargo.toml
crates/velora-events/src/: lib.rs
crates/velora-proto/: Cargo.toml  build.rs
crates/velora-proto/src/: lib.rs
infra/postgres/: init-databases.sh
proto/: auth.proto  user.proto
services/auth/: .env.dev  Cargo.toml
services/auth/migrations/: 20260622005521_create_users.up.sql  20260707161417_create_outbox.down.sql  20260707161417_create_outbox.up.sql
services/auth/src/: config.rs  main.rs
services/auth/src/application/: error.rs  mod.rs  ports.rs  use_cases.rs
services/auth/src/domain/: email.rs  error.rs  mod.rs  password.rs  user.rs
services/auth/src/infrastructure/: argon2cipher.rs  mod.rs  outbox_relay.rs  paseto_issuer.rs  postgres_users.rs  redis_sessions.rs
services/auth/src/presentation/: grpc.rs  mod.rs
services/auth/tests/: integration.rs
services/gateway/: Cargo.toml
services/gateway/src/: config.rs  error.rs  main.rs  state.rs
services/gateway/src/auth/: extractor.rs  mod.rs  verifier.rs
services/gateway/src/routes/: auth_routes.rs  mod.rs
services/users/: Cargo.toml
services/users/migrations/: 20260708082857_create_account.down.sql  20260708082857_create_account.up.sql
services/users/src/: lib.rs  main.rs
services/users/src/application/: error.rs  mod.rs  ports.rs  use_cases.rs
services/users/src/domain/: account.rs  error.rs  mod.rs  profile_name.rs
services/users/src/infrasctruture/: mod.rs  nats_consumer.rs  postgres_accounts.rs
services/users/src/presentation/: grpc.rs  mod.rs
