[workspace]
resolver = "2"

# Versions centralisées : chaque crate du workspace hérite d'ici.
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde"] }

# gRPC / protobuf
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"

# HTTP (gateway)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Données
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "time",
    "migrate",
] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-nats = "0.38"

# Observabilité
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
