[workspace]
resolver = "2"
members = [
    "crates/velora-common",
    "crates/velora-proto",
    "crates/velora-events",
    "services/auth",
    "services/gateway",
]

# Centralized Versions
[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
time = { version = "0.3", features = ["serde-well-known"] }

# gRPC / protobuf
tonic = "0.13"
prost = "0.13"
tonic-build = "0.13"

# HTTP (gateway)
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
utoipa = { version = "4", features = ["axum_extras", "uuid"] }

# Database
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "time",
    "migrate",
] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
async-nats = "0.38"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Internal crates
velora-common = { path = "crates/velora-common" }
velora-proto = { path = "crates/velora-proto" }
velora-events = { path = "crates/velora-events" }

# Secutity / auth
argon2 = "0.5"
pasetors = "0.7"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# tools
async-trait = "0.1"
anyhow = "1"
