[package]
name = "auth"
version = "0.1.0"
edition = "2021"
default-run = "auth"

[dependencies]
velora-common = { workspace = true }
velora-proto = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
redis = { workspace = true }

argon2 = { workspace = true }
pasetors = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
