[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
velora-common = { workspace = true }
velora-proto = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tonic = { workspace = true }

pasetors = { workspace = true }
hex = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
