[package]
name = "users"
version = "0.1.0"
edition = "2021"

[dependencies]
velora-common = { workspace = true }
velora-events = { workspace = true }
velora-proto = { workspace = true }

tokio = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
sqlx = { workspace = true }
async-nats = { workspace = true }
futures = { workspace = true }

serde_json = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
